--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -1,23 +1,32 @@
 body
     background: #131313
     color: #2468F2
-    // font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    text-align: center
+    font-family: "Times New Roman", Georgia, Serif;
 
 a
     color: #2EA5F4
 
 h1
-    text-align: center
-    font-size: 50px
+    font-size: 48px
     font-variant: small-caps
-    text-shadow: 1px 1px 8px #2EA5F4;
-    background: linear-gradient(60deg, #2468F2, #FFF, #2468F2);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: rgba(0, 0, 0, 0);
+    background: linear-gradient(60deg, #2468F2, #FFF, #2468F2)
+    background-clip: text
+    -webkit-background-clip: text
+    color: rgba(0, 0, 0, 0)
+h1 a
+    letter-spacing: 0.1em
+h1 a span
+    color: rgba(0, 0, 0, 0)
+    text-shadow: 1px 1px 8px #2EA5F4
 
-.o
-    text-shadow: 1px 1px 8px #C8EAFF;
+h2
+    color: #2EA5F4
+    font-size: 18px
+    // text-decoration: underline
+    text-transform: uppercase
+    letter-spacing: 0.05em
+
 
 
 
