--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -8,7 +8,7 @@ a
     color: #2EA5F4
 
 h1
-    font-size: 48px
+    font-size: 45px
     font-variant: small-caps
     background: linear-gradient(60deg, #2468F2, #FFF, #2468F2)
     background-clip: text
@@ -26,6 +26,19 @@ h2
     // text-decoration: underline
     text-transform: uppercase
     letter-spacing: 0.05em
+
+#main
+    display: grid
+    margin: 0 auto
+    grid-template-columns: 1fr
+    grid-template-rows: 200px 1fr
+    width: 95vw
+    height: 95vh
+
+#app
+    display: grid
+    grid-template-columns: 1fr
+    grid-template-rows: 1fr
 
 
 
