Added a speed chooser.

--- a/sorts/sass/bubblesort.sass
+++ b/sorts/sass/bubblesort.sass
@@ -5,7 +5,7 @@
 
 .BubbleSort-demo
     display: grid
-    grid-template-columns: 1fr
+    grid-template-columns: 100px 1fr
     grid-template-rows: 1fr
 
 .BubbleSort-listContainer
