Better design and options.

--- a/sorts/sass/bubblesort.sass
+++ b/sorts/sass/bubblesort.sass
@@ -4,6 +4,7 @@
     grid-template-rows: repeat(2, 1fr)
 
 .BubbleSort-demo
+    position: relative
     display: grid
     grid-template-columns: 100px 1fr
     grid-template-rows: 1fr
@@ -25,5 +26,13 @@
     box-shadow: 1px 1px 20px #C1D1F2
 
 .BubbleSort-compareB
-    background: #97E4FF
-    box-shadow: 1px 1px 20px #51D2FF
+    background: #83C7DE
+    box-shadow: 1px 1px 20px #70ABBE
+
+.BubbleSort-compareAt
+    position: absolute
+    left: 100px
+    right: 0
+    border: 0 solid rgba(255, 255, 255, 0.8)
+    border-bottom-width: 2px
+    box-shadow: 0 2px 20px rgba(151, 228, 255, 0.8)
