--- a/sorts/sass/bubblesort.sass
+++ b/sorts/sass/bubblesort.sass
@@ -1,7 +1,7 @@
 .BubbleSort
     display: grid
     grid-template-columns: 100%
-    grid-template-rows: repeat(2, 1fr)
+    grid-template-rows: 1fr 50px 1fr
 
 .BubbleSort-demo
     position: relative
@@ -36,3 +36,9 @@
     border: 0 solid rgba(255, 255, 255, 0.8)
     border-bottom-width: 2px
     box-shadow: 0 2px 20px rgba(151, 228, 255, 0.8)
+
+.BubbleSort-graph
+    display: grid
+    grid-template-columns: 1fr
+    grid-template-rows: 1fr
+    outline: 1px solid blue
