--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -7,6 +7,12 @@ body
 a
     color: #2EA5F4
 
+label
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 14px
+    text-transform: lowercase
+    color: #97E4FF
+
 h1
     font-size: 45px
     font-variant: small-caps
