fix this in edge.

--- a/sorts/sass/performancegraph.sass
+++ b/sorts/sass/performancegraph.sass
@@ -21,6 +21,7 @@
 
 .PerformanceGraph-section
     display: grid
+    position: relative
     grid-template-columns: 1fr
     grid-template-rows: 1fr
     outline: 1px solid transparent
