--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -7,11 +7,15 @@ body
 a
     color: #2EA5F4
 
-label
+label, text
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 14px
     text-transform: lowercase
     color: #97E4FF
+text
+    font-family: sans-serif
+    font-size: 16px
+    letter-spacing: 5px
 
 h1
     font-size: 45px
