--- a/sorts/sass/sortview.sass
+++ b/sorts/sass/sortview.sass
@@ -1,48 +1,27 @@
-.BubbleSort
+.SortView
     display: grid
     grid-template-columns: 100%
     grid-template-rows: 1fr 50px 1fr
 
-.BubbleSort-demo
+.SortView-demo
     position: relative
     display: grid
     grid-template-columns: 75px 1fr 75px
     grid-template-rows: 1fr
 
-.BubbleSort-demo .SpeedChooser
+.SortView-demo .SpeedChooser
     opacity: 0;
 
-.BubbleSort-demo:hover .SpeedChooser
+.SortView-demo:hover .SpeedChooser
     opacity: 1;
+
+.SortView-graph
+    display: grid
+    grid-template-columns: 1fr
+    grid-template-rows: 1fr
 
 .BubbleSort-listContainer
     display: grid
     grid-template-rows: 1fr
     grid-gap: 2px
     position: relative
-
-.BubbleSort-item
-    display: grid
-    background:  #2468F2
-    align-self: end
-
-.BubbleSort-compareA
-    background: #FFF
-    box-shadow: 1px 1px 20px #C1D1F2
-
-.BubbleSort-compareB
-    background: #83C7DE
-    box-shadow: 1px 1px 20px #70ABBE
-
-.BubbleSort-compareAt
-    position: absolute
-    left: 75px
-    right: 75px
-    border: 0 solid rgba(255, 255, 255, 0.8)
-    border-bottom-width: 2px
-    box-shadow: 0 2px 20px rgba(151, 228, 255, 0.8)
-
-.BubbleSort-graph
-    display: grid
-    grid-template-columns: 1fr
-    grid-template-rows: 1fr
