Style sort chooser some.

--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -7,11 +7,14 @@ body
 a
     color: #2EA5F4
 
-label, text
+label, text, li a
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 14px
     text-transform: lowercase
     color: #97E4FF
+
+li a
+    text-decoration: none
 text
     font-family: sans-serif
     font-size: 16px
