--- a/sorts/sass/sortchooser.sass
+++ b/sorts/sass/sortchooser.sass
@@ -1,3 +1,25 @@
 .SortChooser
     position: relative
     z-index: 10
+    cursor: pointer
+.SortChooser-list
+    text-align: center
+    width: 150px
+    position: relative
+    top: -10px
+    margin: 0 auto
+    padding: 5px 0
+    display: none
+    background: #444
+    border-radius: 6px
+    box-shadow: 2px 3px 5px #333
+.SortChooser-list li
+    list-style: none
+.SortChooser-list li:hover
+    background: #333
+.SortChooser-list li a
+    padding: 5px
+    display: block
+.SortChooser:hover .SortChooser-list
+    display: block
+
