Rename sortitem to make it more general.

--- a/sorts/sass/sortitem.sass
+++ b/sorts/sass/sortitem.sass
@@ -1,18 +1,18 @@
 
-.BubbleSortItem
+.SortItem
     display: grid
     background:  #2468F2
     align-self: end
 
-.BubbleSortItem-compareA
+.SortItem-compareA
     background: #FFF
     box-shadow: 1px 1px 20px #C1D1F2
 
-.BubbleSortItem-compareB
+.SortItem-compareB
     background: #83C7DE
     box-shadow: 1px 1px 20px #70ABBE
 
-.BubbleSortItem-compareAt
+.SortItem-compareAt
     position: absolute
     left: 75px
     right: 75px
