--- a/sorts/sass/bubblesort.sass
+++ b/sorts/sass/bubblesort.sass
@@ -1,11 +1,19 @@
-.BubbleSort
+.SortDemo
     display: grid
     grid-template-colums: 1fr
     grid-template-rows: 1fr
     position: relative
 
-.BubbleSort-listContainer
+.SortDemo-listContainer
     display: grid
     grid-template-rows: 1fr
     grid-gap: 2px
     position: relative
+
+.SortDemo-compareAt
+    position: absolute
+    left: 0
+    right: 0
+    border: 0 solid rgba(255, 255, 255, 0.8)
+    border-bottom-width: 2px
+    box-shadow: 0 2px 20px rgba(151, 228, 255, 0.8)
