Make highlights lists for flexibility.

--- a/sorts/sass/sortitem.sass
+++ b/sorts/sass/sortitem.sass
@@ -4,10 +4,10 @@
     background:  #2468F2
     align-self: end
 
-.SortItem-compareA
+.SortItem-highlighted
     background: #FFF
     box-shadow: 1px 1px 20px #C1D1F2
 
-.SortItem-compareB
+.SortItem-focused
     background: #83C7DE
     box-shadow: 1px 1px 20px #70ABBE
