quicksort behavior can be followed now.

--- a/sorts/sass/sortitem.sass
+++ b/sorts/sass/sortitem.sass
@@ -4,10 +4,17 @@
     background:  #2468F2
     align-self: end
 
+.SortItem-section
+    background: #39507F
+
+.SortItem-focused
+    background: #7DCBFF
+    box-shadow: 1px 1px 20px #2EA5F4
+
+.SortItem-selected
+    background: #C9EAFF
+    box-shadow: 1px 1px 20px #C9EAFF
+
 .SortItem-highlighted
     background: #FFF
     box-shadow: 1px 1px 20px #C1D1F2
-
-.SortItem-focused
-    background: #83C7DE
-    box-shadow: 1px 1px 20px #70ABBE
