--- a/sorts/sass/sortdemo.sass
+++ b/sorts/sass/sortdemo.sass
@@ -1,6 +1,6 @@
 .SortDemo
     display: grid
-    grid-template-colums: 1fr
+    grid-template-columns: 1fr
     grid-template-rows: 1fr
     position: relative
 
