Progress on merge sort, compare currently wacky.

--- a/sorts/sass/sortitem.sass
+++ b/sorts/sass/sortitem.sass
@@ -7,6 +7,9 @@
 .SortItem-section
     background: #39507F
 
+.SortItem-highlightedSection
+    background: #64A9F2
+
 .SortItem-focused
     background: #7DCBFF
     box-shadow: 1px 1px 20px #2EA5F4
