--- a/sorts/sass/main.sass
+++ b/sorts/sass/main.sass
@@ -41,6 +41,7 @@ h2
     letter-spacing: 0.05em
 
 #main
+    max-width: 1200px
     display: grid
     margin: 0 auto
     grid-template-columns: 1fr
